MoccalParser.py
# Generated from Moccal.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MoccalParser ( Parser ):

    grammarFileName = "Moccal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'=='", "'<='", "'>='", "'!='", 
                     "'^='", "'&='", "'|='", "'*='", "'-='", "'+='", "'/='", 
                     "'%='", "','", "'.'", "'and'", "'or'", "'not'", "'~'", 
                     "'%'", "'^'", "'&'", "'|'", "'='", "'*'", "'+'", "'/'", 
                     "'!'", "'<'", "'>'", "'-'", "'#'", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "';'", "':'", "'C'", "'let'", 
                     "'this'", "'super'", "'public'", "'private'", "'protected'", 
                     "'function'", "'api'", "'class'", "'struct'", "'extends'", 
                     "'if'", "'elif'", "'else'", "'continue'", "'break'", 
                     "'return'", "'->'", "'use'", "'as'", "'for'", "'while'", 
                     "'import'", "'include'" ]

    symbolicNames = [ "<INVALID>", "SINGLECOMMENT", "MULTICOMMENT", "FLOAT", 
                      "INT", "STRING", "EQ", "LE", "GE", "NE", "XOREQ", 
                      "ANDEQ", "OREQ", "MULEQ", "SUBEQ", "ADDEQ", "DIVEQ", 
                      "MODEQ", "COMMA", "DOT", "LOGAND", "LOGOR", "LOGNOT", 
                      "NOT", "MOD", "XOR", "AND", "OR", "SET", "MUL", "ADD", 
                      "DIV", "COPY", "LT", "GT", "SUB", "HASHTAG", "LPAREN", 
                      "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
                      "SEMICOLON", "COLON", "C", "LET", "THIS", "SUPER", 
                      "PUBLIC", "PRIVATE", "PROTECTED", "FUNCTION", "API", 
                      "CLASS", "STRUCT", "EXTENDS", "IF", "ELIF", "ELSE", 
                      "CONTINUE", "BREAK", "RETURN", "ARROW", "USE", "AS", 
                      "FOR", "WHILE", "IMPORT", "INCLUDE", "ID", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_access_specifier = 0
    RULE_moccal = 1
    RULE_c = 2
    RULE_line = 3
    RULE_guarantee = 4
    RULE_assumption = 5
    RULE_directive = 6
    RULE_imp = 7
    RULE_include = 8
    RULE_scope = 9
    RULE_args = 10
    RULE_for = 11
    RULE_while = 12
    RULE_use = 13
    RULE_as = 14
    RULE_useas = 15
    RULE_continue = 16
    RULE_break = 17
    RULE_return = 18
    RULE_ctrl_block = 19
    RULE_ifblock = 20
    RULE_elifblock = 21
    RULE_elseblock = 22
    RULE_class = 23
    RULE_function = 24
    RULE_declaration = 25
    RULE_expr = 26
    RULE_array_literal = 27

    ruleNames =  [ "access_specifier", "moccal", "c", "line", "guarantee", 
                   "assumption", "directive", "imp", "include", "scope", 
                   "args", "for", "while", "use", "as", "useas", "continue", 
                   "break", "return", "ctrl_block", "ifblock", "elifblock", 
                   "elseblock", "class", "function", "declaration", "expr", 
                   "array_literal" ]

    EOF = Token.EOF
    SINGLECOMMENT=1
    MULTICOMMENT=2
    FLOAT=3
    INT=4
    STRING=5
    EQ=6
    LE=7
    GE=8
    NE=9
    XOREQ=10
    ANDEQ=11
    OREQ=12
    MULEQ=13
    SUBEQ=14
    ADDEQ=15
    DIVEQ=16
    MODEQ=17
    COMMA=18
    DOT=19
    LOGAND=20
    LOGOR=21
    LOGNOT=22
    NOT=23
    MOD=24
    XOR=25
    AND=26
    OR=27
    SET=28
    MUL=29
    ADD=30
    DIV=31
    COPY=32
    LT=33
    GT=34
    SUB=35
    HASHTAG=36
    LPAREN=37
    RPAREN=38
    LBRACK=39
    RBRACK=40
    LBRACE=41
    RBRACE=42
    SEMICOLON=43
    COLON=44
    C=45
    LET=46
    THIS=47
    SUPER=48
    PUBLIC=49
    PRIVATE=50
    PROTECTED=51
    FUNCTION=52
    API=53
    CLASS=54
    STRUCT=55
    EXTENDS=56
    IF=57
    ELIF=58
    ELSE=59
    CONTINUE=60
    BREAK=61
    RETURN=62
    ARROW=63
    USE=64
    AS=65
    FOR=66
    WHILE=67
    IMPORT=68
    INCLUDE=69
    ID=70
    WHITESPACE=71
    NEWLINE=72

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Access_specifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(MoccalParser.PUBLIC, 0)

        def PRIVATE(self):
            return self.getToken(MoccalParser.PRIVATE, 0)

        def PROTECTED(self):
            return self.getToken(MoccalParser.PROTECTED, 0)

        def getRuleIndex(self):
            return MoccalParser.RULE_access_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess_specifier" ):
                listener.enterAccess_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess_specifier" ):
                listener.exitAccess_specifier(self)




    def access_specifier(self):

        localctx = MoccalParser.Access_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_access_specifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3940649673949184) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MoccalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MoccalParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoccalParser.LineContext)
            else:
                return self.getTypedRuleContext(MoccalParser.LineContext,i)


        def getRuleIndex(self):
            return MoccalParser.RULE_moccal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMoccal" ):
                listener.enterMoccal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMoccal" ):
                listener.exitMoccal(self)




    def moccal(self):

        localctx = MoccalParser.MoccalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_moccal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 58
                    self.match(MoccalParser.NEWLINE) 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8286591124131807288) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 333) != 0):
                self.state = 64
                self.line()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(MoccalParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def C(self):
            return self.getToken(MoccalParser.C, 0)

        def scope(self):
            return self.getTypedRuleContext(MoccalParser.ScopeContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def getRuleIndex(self):
            return MoccalParser.RULE_c

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterC" ):
                listener.enterC(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitC" ):
                listener.exitC(self)




    def c(self):

        localctx = MoccalParser.CContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_c)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(MoccalParser.C)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==72:
                self.state = 73
                self.match(MoccalParser.NEWLINE)
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MoccalParser.ExprContext,0)


        def declaration(self):
            return self.getTypedRuleContext(MoccalParser.DeclarationContext,0)


        def function(self):
            return self.getTypedRuleContext(MoccalParser.FunctionContext,0)


        def class_(self):
            return self.getTypedRuleContext(MoccalParser.ClassContext,0)


        def ctrl_block(self):
            return self.getTypedRuleContext(MoccalParser.Ctrl_blockContext,0)


        def continue_(self):
            return self.getTypedRuleContext(MoccalParser.ContinueContext,0)


        def break_(self):
            return self.getTypedRuleContext(MoccalParser.BreakContext,0)


        def return_(self):
            return self.getTypedRuleContext(MoccalParser.ReturnContext,0)


        def useas(self):
            return self.getTypedRuleContext(MoccalParser.UseasContext,0)


        def for_(self):
            return self.getTypedRuleContext(MoccalParser.ForContext,0)


        def while_(self):
            return self.getTypedRuleContext(MoccalParser.WhileContext,0)


        def directive(self):
            return self.getTypedRuleContext(MoccalParser.DirectiveContext,0)


        def guarantee(self):
            return self.getTypedRuleContext(MoccalParser.GuaranteeContext,0)


        def assumption(self):
            return self.getTypedRuleContext(MoccalParser.AssumptionContext,0)


        def scope(self):
            return self.getTypedRuleContext(MoccalParser.ScopeContext,0)


        def c(self):
            return self.getTypedRuleContext(MoccalParser.CContext,0)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.SEMICOLON)
            else:
                return self.getToken(MoccalParser.SEMICOLON, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def getRuleIndex(self):
            return MoccalParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = MoccalParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 81
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 82
                self.declaration()
                pass

            elif la_ == 3:
                self.state = 83
                self.function()
                pass

            elif la_ == 4:
                self.state = 84
                self.class_()
                pass

            elif la_ == 5:
                self.state = 85
                self.ctrl_block()
                pass

            elif la_ == 6:
                self.state = 86
                self.continue_()
                pass

            elif la_ == 7:
                self.state = 87
                self.break_()
                pass

            elif la_ == 8:
                self.state = 88
                self.return_()
                pass

            elif la_ == 9:
                self.state = 89
                self.useas()
                pass

            elif la_ == 10:
                self.state = 90
                self.for_()
                pass

            elif la_ == 11:
                self.state = 91
                self.while_()
                pass

            elif la_ == 12:
                self.state = 92
                self.directive()
                pass

            elif la_ == 13:
                self.state = 93
                self.guarantee()
                pass

            elif la_ == 14:
                self.state = 94
                self.assumption()
                pass

            elif la_ == 15:
                self.state = 95
                self.scope()
                pass

            elif la_ == 16:
                self.state = 96
                self.c()
                pass


            self.state = 100 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 99
                    _la = self._input.LA(1)
                    if not(_la==43 or _la==72):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 102 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GuaranteeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.MUL)
            else:
                return self.getToken(MoccalParser.MUL, i)

        def scope(self):
            return self.getTypedRuleContext(MoccalParser.ScopeContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def getRuleIndex(self):
            return MoccalParser.RULE_guarantee

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGuarantee" ):
                listener.enterGuarantee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGuarantee" ):
                listener.exitGuarantee(self)




    def guarantee(self):

        localctx = MoccalParser.GuaranteeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_guarantee)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MoccalParser.MUL)
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 105
                self.match(MoccalParser.MUL)


            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 108
                self.match(MoccalParser.MUL)


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==72:
                self.state = 111
                self.match(MoccalParser.NEWLINE)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssumptionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NOT)
            else:
                return self.getToken(MoccalParser.NOT, i)

        def scope(self):
            return self.getTypedRuleContext(MoccalParser.ScopeContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def getRuleIndex(self):
            return MoccalParser.RULE_assumption

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssumption" ):
                listener.enterAssumption(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssumption" ):
                listener.exitAssumption(self)




    def assumption(self):

        localctx = MoccalParser.AssumptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assumption)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(MoccalParser.NOT)
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 120
                self.match(MoccalParser.NOT)


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 123
                self.match(MoccalParser.NOT)


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==72:
                self.state = 126
                self.match(MoccalParser.NEWLINE)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.scope()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def imp(self):
            return self.getTypedRuleContext(MoccalParser.ImpContext,0)


        def include(self):
            return self.getTypedRuleContext(MoccalParser.IncludeContext,0)


        def getRuleIndex(self):
            return MoccalParser.RULE_directive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirective" ):
                listener.enterDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirective" ):
                listener.exitDirective(self)




    def directive(self):

        localctx = MoccalParser.DirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_directive)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.imp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.include()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASHTAG(self):
            return self.getToken(MoccalParser.HASHTAG, 0)

        def IMPORT(self):
            return self.getToken(MoccalParser.IMPORT, 0)

        def expr(self):
            return self.getTypedRuleContext(MoccalParser.ExprContext,0)


        def getRuleIndex(self):
            return MoccalParser.RULE_imp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImp" ):
                listener.enterImp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImp" ):
                listener.exitImp(self)




    def imp(self):

        localctx = MoccalParser.ImpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_imp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MoccalParser.HASHTAG)
            self.state = 139
            self.match(MoccalParser.IMPORT)
            self.state = 140
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASHTAG(self):
            return self.getToken(MoccalParser.HASHTAG, 0)

        def INCLUDE(self):
            return self.getToken(MoccalParser.INCLUDE, 0)

        def expr(self):
            return self.getTypedRuleContext(MoccalParser.ExprContext,0)


        def getRuleIndex(self):
            return MoccalParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)




    def include(self):

        localctx = MoccalParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(MoccalParser.HASHTAG)
            self.state = 143
            self.match(MoccalParser.INCLUDE)
            self.state = 144
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MoccalParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MoccalParser.RBRACE, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoccalParser.LineContext)
            else:
                return self.getTypedRuleContext(MoccalParser.LineContext,i)


        def getRuleIndex(self):
            return MoccalParser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScope" ):
                listener.exitScope(self)




    def scope(self):

        localctx = MoccalParser.ScopeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_scope)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MoccalParser.LBRACE)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 147
                    self.match(MoccalParser.NEWLINE) 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 156
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 153
                    self.line() 
                self.state = 158
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 159
            self.match(MoccalParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(MoccalParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MoccalParser.RPAREN, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.NEWLINE)
            else:
                return self.getToken(MoccalParser.NEWLINE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MoccalParser.ExprContext)
            else:
                return self.getTypedRuleContext(MoccalParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MoccalParser.COMMA)
            else:
                return self.getToken(MoccalParser.COMMA, i)

        def getRuleIndex(self):
            return MoccalParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = MoccalParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MoccalParser.LPAREN)
            self.state = 165
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 162
                    self.match(MoccalParser.NEWLINE) 
                self.state = 167
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 168
                self.expr(0)
                self.state = 169
                self.expr(0)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 170
                    self.match(MoccalParser.COMMA)
                    self.state = 174
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 171
                            self.match(MoccalParser.NEWLINE) 
                        self.state = 176
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                    self.state = 177
                    self.expr(0)
                    self.state = 178
                    self.expr(0)
                    self.state = 184
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


